# lotrust

./: .gitignore  Cargo.toml  LICENSE  README.md  acc_defn.lotr  elegant_example.lte
.github/workflows/: rust.yml
scripts/: plots.py
src/: beam.rs  elegant_rpn.rs  elements.rs  main.rs  parse_elegant.rs  parse_lotr.rs
tests/: acc_defn.lotr  csrcsbend_output_true.beam  dipole_output.beam  dipole_output_true.beam  drift_output_test.beam  hkick_output_true.beam  kquad_output_true.beam  ksext_output_true.beam  marker_output_true.beam  moni_output_true.beam  monitor_output_true.beam  rben_output_true.beam  rfcw_crest_output_test.beam  rfcw_crest_output_true.beam  rfcw_output_true.beam  rfcw_zerocrossing_output_test.beam  rfcw_zerocrossing_output_true.beam  rfdf_output_true.beam  sben_output_true.beam  sbend_output_true.beam  spf_energy_profile_test.data  spf_output_test.beam  spf_output_true.beam  test_beam.lotr  test_lines.ele  test_lines.lte  vkick_output_true.beam  wiggler_output_true.beam
tests/elegant_test_runs/: analysis.py  analysis.sh  elegant_example.lte  lastbendbc2.csr  make_files.sh  test_CSRCSBEND.ele  test_DRIFT.ele  test_ECOL.ele  test_HKICK.ele  test_KQUAD.ele  test_KSEXT.ele  test_MARKER.ele  test_MONI.ele  test_MONITOR.ele  test_RBEN.ele  test_RFCW_CREST.ele  test_RFCW_ZEROCROSSING.ele  test_RFDF.ele  test_SBEN.ele  test_SBEND.ele  test_SCRAPER.ele  test_VKICK.ele  test_WIGGLER.ele  test_lines.ele
tests/elegant_test_runs/input/: test_beam.csv  test_beam.sdds
