[package]
name = "lotrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
ndarray = "0.15.6"
ndarray-npy = { version = "0.8.1", default-features = false }
rustyline = "12.0.0"

[dev-dependencies]
approx = "0.5.1"
